--- a/.github/workflows/workflow_release.yml
+++ b/.github/workflows/workflow_release.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           # Semantic version range syntax or exact version of a Python version
-          python-version: '3.x'
+          python-version: '3.10'
       - name: info
         run: python --version && cmake --version
       - name: install dependencies
@@ -176,7 +176,7 @@ jobs:
       - name: set up python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: '3.10'
       - name: info
         run: python --version && cmake --version && dotnet --version && git --version
       - name: checkout
@@ -205,7 +205,7 @@ jobs:
       - name: set up python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: '3.10'
       - name: checkout
         uses: actions/checkout@v2
       - name: update submodules
